[package]
name = "libcobs-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.libcobs]
path = ".."

[[bin]]
name = "fuzz_loopback"
path = "fuzz_targets/fuzz_loopback.rs"
test = false
doc = false
bench = false
